# tinyswift

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  main.cpp  test.swift
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  release.yml  tinyswift-debug-build-linux.yml  tinyswift-debug-build-macos.yml  tinyswift-debug-build-windows.yml  tinyswift-debug-build.yml
cmake/modules/: SwiftSharedCMakeConfig.cmake
docs/TinySwift/: EmbeddedCDevelopers.md  GettingStarted.md  LanguageGuide.md
examples/blink-led/: Makefile  README.md  blink.swift
examples/calculator/: Makefile  README.md  calculator.swift
examples/hello-uart/: Makefile  README.md  hello.swift
examples/wasm-fibonacci/: Makefile  README.md  fibonacci.swift
include/swift/AST/: ASTContext.h  Comment.h  DiagnosticEngine.h  DiagnosticsSIL.def  DiagnosticsSema.def  SILOptions.h
include/swift/Basic/: Features.def  Statistics.def
include/swift/ClangImporter/: ClangImporterRequests.h
include/swift/Frontend/: Frontend.h
include/swift/IRGen/: NoMetadataVerifier.h
include/swift/Runtime/: RuntimeFunctions.def
include/swift/Sema/: CompletionContextFinder.h
include/swift/Serialization/: Validation.h
include/tinyswift/AST/: AttrKind.h  DiagnosticEngine.h  DiagnosticsAll.def  DiagnosticsParse.def  DiagnosticsParse.h  Identifier.h  OptionSet.h  PrintOptions.h  STLExtras.h  TypeAlignments.h
include/tinyswift/Diagnostic/: DiagnosticConsumer.h  DiagnosticEngine.h  DiagnosticsCommon.def  DiagnosticsCommon.h  DiagnosticsParse.h
include/tinyswift/Lexer/: CharInfo.h  DiagnosticConsumer.h  LangOptions.h  Lexer.h  SourceLoc.h  SourceManager.h  StringHelper.h  Token.h  TokenKinds.def
include/tinyswift/Parser/: CharInfo.h  Lexer.h  Token.h  TokenKinds.def
include/tinyswift/Source/: SourceLoc.h  SourceManager.h
lib/: CMakeLists.txt
lib/AST/: ASTContext.cpp  ASTDumper.cpp  ASTMangler.cpp  ASTPrinter.cpp  ASTScopeLookup.cpp  Availability.cpp  CMakeLists.txt  Decl.cpp  DiagnosticEngine.cpp  DistributedDecl.cpp  DocComment.cpp  FeatureSet.cpp  Identifier.cpp  ModuleLoader.cpp  NameLookup.cpp  NameLookupRequests.cpp  RawComment.cpp  TinySwiftStubs.cpp  UnqualifiedLookup.cpp
lib/Basic/: CMakeLists.txt
lib/ClangImporter/: CMakeLists.txt  ClangImporterStubs.cpp
lib/DependencyScan/: CMakeLists.txt  ModuleDependencyScanner.cpp  ScanDependencies.cpp
lib/Diagnostic/: CMakeLists.txt  DiagnosticConsumer.cpp  DiagnosticEngine.cpp  DiagnosticList.cpp
lib/DriverTool/: CMakeLists.txt  modulewrap_main.cpp  sil_func_extractor_main.cpp  sil_opt_main.cpp  swift_api_digester_main.cpp  swift_symbolgraph_extract_main.cpp  swift_synthesize_interface_main.cpp
lib/Frontend/: CMakeLists.txt  CompilerInvocation.cpp  DiagnosticHelper.cpp  Frontend.cpp  PrintingDiagnosticConsumer.cpp  Serialization.cpp
lib/FrontendTool/: CMakeLists.txt  FrontendTool.cpp  ImportedModules.cpp  LoadedModuleTrace.cpp
lib/IRGen/: CMakeLists.txt  ClassTypeInfo.h  GenArchetype.cpp  GenCall.cpp  GenCast.cpp  GenClangDecl.cpp  GenClass.cpp  GenDecl.cpp  GenExistential.cpp  GenHeap.cpp  GenMeta.cpp  GenObjC.cpp  GenProto.cpp  GenReflection.cpp  GenValueWitness.cpp  IRGen.cpp  IRGenDebugInfo.cpp  IRGenMangler.cpp  IRGenModule.cpp  IRGenModule.h  IRGenSIL.cpp  Linking.cpp  MetadataRequest.cpp  NativeConventionSchema.h  NoMetadataVerifier.cpp  TBDGen.cpp  TBDGenRequests.cpp
lib/Lexer/: CMakeLists.txt  CharInfo.cpp  DiagnosticConsumer.cpp  DiagnosticEngine.cpp  Lexer.cpp  SourceLoc.cpp  Token.cpp
lib/Option/: CMakeLists.txt
lib/Parse/: Parser.cpp
lib/Parser/: CMakeLists.txt  Lexer.cpp  Token.cpp  Token.h  TokenKinds.def
lib/SIL/IR/: Linker.cpp  SIL.cpp  SILDeclRef.cpp  SILFunctionType.cpp  SILModule.cpp  SILSymbolVisitor.cpp  TypeLowering.cpp
lib/SIL/Verifier/: SILVerifier.cpp
lib/SILGen/: SILGen.cpp  SILGenApply.cpp  SILGenBridging.cpp  SILGenConstructor.cpp  SILGenConvert.cpp  SILGenDestructor.cpp  SILGenForeignError.cpp  SILGenType.cpp
lib/SILOptimizer/: CMakeLists.txt
lib/SILOptimizer/ARC/: CMakeLists.txt  TinySwiftARCStubs.cpp
lib/SILOptimizer/Mandatory/: CMakeLists.txt  DefiniteInitialization.cpp  MoveOnlyChecker.cpp  OwnershipModelEliminator.cpp  TinySwiftGenericSpecializationVerifier.cpp  TinySwiftOwnershipLowering.cpp  TinySwiftVerifier.cpp
lib/SILOptimizer/PassManager/: PassPipeline.cpp
lib/SILOptimizer/SemanticARC/: SemanticARCOpts.cpp
lib/Sema/: AssociatedTypeInference.cpp  CSDiagnostics.cpp  CSSimplify.cpp  CodeSynthesisDistributedActor.cpp  Comment.cpp  DerivedConformances.cpp  ImportResolution.cpp  MiscDiagnostics.cpp  TypeCheckAttr.cpp  TypeCheckConstraints.cpp  TypeCheckDecl.cpp  TypeCheckDeclObjC.cpp  TypeCheckDeclPrimary.cpp  TypeCheckMacros.cpp  TypeCheckType.cpp  TypeChecker.cpp
lib/Serialization/: CMakeLists.txt  Deserialization.cpp  ModuleFile.cpp  ModuleFileSharedCore.cpp  ModuleFormat.h  Serialization.cpp
lib/Source/: CMakeLists.txt  SourceLoc.cpp
scripts/: binary-size-report.sh  check-forbidden-symbols.sh  package-toolchain.sh  run-cross-target-tests.sh  upstream-sync-check.sh
stdlib/: CMakeLists.txt
stdlib/public/TinySwift/: Builtins.swift  CMakeLists.txt  Runtime.c
test/TinySwift/embedded/: hello_uart_arm64.swift  hello_uart_riscv32.swift  hello_wasm.swift
test/TinySwift/metadata/: binary_size_budget.swift  no_metadata_ir_verify.swift  no_metadata_sections.swift  no_reflection.swift  no_swift5_fieldmd.swift  no_swift5_proto.swift  no_swift5_types.swift  no_type_descriptors.swift  no_value_witness.swift  no_witness_tables.swift  specialization_required.swift
test/TinySwift/ownership/: borrow_semantics.swift  closure_capture.swift  conditional_consume.swift  consume_struct.swift  full_regression.swift  generic_move.swift  move_semantics.swift  nested_ownership.swift  no_arc_in_ir.swift  no_arc_symbols.swift  noncopyable_deinit.swift  partial_move.swift
tools/: CMakeLists.txt
tools/driver/tinyswiftc/: CMakeLists.txt  tinyswiftc_main.cpp
utils/embedded-test-support/: embedded-test-support.py
(+81 files in other folders)
